# arch_project

./: .gitignore  CMakeLists.txt  README.md
_codeql_build_dir/: CMakeCache.txt  Makefile  app  cmake_install.cmake
app/inc/: app_config.h
app/src/: main.cpp
board/inc/: board.h  board_irq_priorities.h  board_revision_select.h
board/rev_a/inc/: board_clock.h  board_config.h  board_rev.h  board_system_timer_traits.h  board_timebase.h  pin_map.h
board/rev_a/src/: board_clock_stm32h7_ll.cpp  board_init.cpp  board_irq_glue_i2c.cpp  board_irq_glue_uart.cpp  board_system_timer_stm32h7_ll.cpp  board_timebase.cpp  uart_ll_backend_instantiations.cpp
devices/ft6236/inc/: ft6236.h
docs/debug/: swo_visualgdb.md
drivers/i2c/backend/stm32h7/cmsis/inc/: i2c_cmsis_backend.h
drivers/i2c/backend/stm32h7/cmsis/src/: i2c_cmsis_irq_glue.cpp
drivers/i2c/backend/stm32h7/common/inc/: i2c_stm32h7_periph.h
drivers/i2c/backend/stm32h7/hal/inc/: i2c_hal_backend.h
drivers/i2c/backend/stm32h7/hal/src/: i2c_hal_irq_glue.cpp
drivers/i2c/backend/stm32h7/ll/inc/: i2c_ll_backend.h
drivers/i2c/backend/stm32h7/ll/src/: i2c_ll_backend.cpp  i2c_ll_irq_glue.cpp
drivers/i2c/backend/stm32h7/low_layer/inc/: i2c_ll_backend.h
drivers/i2c/backend/stm32h7/low_layer/src/: i2c_ll_backend.cpp
drivers/i2c/core/inc/: i2c_bus.h  i2c_context.h  i2c_error.h  i2c_traits.h  i2c_types.h
drivers/i2c/policy/inc/: i2c_policy_dma_irq.h  i2c_policy_irq.h  i2c_policy_polling.h
drivers/i2c/wait/inc/: i2c_wait_baremetal.h  i2c_wait_threadx.h  i2c_wait_timed_busy.h
drivers/uart/backend/stm32h7/common/inc/: uart_stm32h7_board_cfg.h  uart_stm32h7_mcu_periph.h  uart_stm32h7_periph.h
drivers/uart/backend/stm32h7/low_layer/inc/: uart_ll_backend.h  uart_ll_backend_impl.h
drivers/uart/core/inc/: uart_error.h  uart_port.h  uart_traits.h
drivers/uart/policy/inc/: uart_policy_irq.h  uart_policy_polling.h
mcu/stm32h7/inc/: mcu_map.h
mcu/stm32h7/inc/chips/: mcu_map_stm32h750.h
mcu/stm32h7/inc/detail/: stm32h7_ll_helpers.h
mcu/stm32h7/inc/low_layer/: stm32h7_ll_helpers.h
system/inc/: system_clocks.h  system_init.h  system_swo.h  system_timer.h
system/src/: system_clocks.cpp  system_init.cpp  system_swo.cpp
